# wind-server

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/: windsurf-internals.md
systemd/: wind-server.service
tests/: test_lsp_client.py  test_profile.py  test_ratelimit.py  test_vscdb.py  test_windsurf_proc.py
wind_server/: __init__.py  cli.py  daemon.py  log.py  lsp_client.py  paths.py  profile.py  ratelimit.py  settings.py  storage_json.py  tui.py  vscdb.py  windsurf_proc.py
